# robotic-projects

./: .gitignore  README.md  params.json.example  pyproject.toml
deploy/: fnk0043.service
docs/: api.md  camera-calibration.md  freenove.md  hardware.md  setup.md
fnk0043/: __init__.py  config.py  robot.py
fnk0043/actuators/: __init__.py  buzzer.py  leds.py  servo.py
fnk0043/behaviors/: __init__.py  autonomous.py
fnk0043/camera/: stream.py
fnk0043/cli/: center_servos.py
fnk0043/hal/: __init__.py  factory.py  mock.py  protocols.py  real.py
fnk0043/motors/: __init__.py  drive.py
fnk0043/sensors/: __init__.py  battery.py  infrared.py  light.py  ultrasonic.py
fnk0043/web/: server.py
fnk0043/web/static/: app.js  index.html  style.css
scripts/: install-service.sh  uninstall-service.sh
tests/: test_mock.py
