[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnk0043"
version = "0.1.0"
description = "Clean Python wrappers and web control for the Freenove FNK0043 4WD Smart Car"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mehran" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
# Prefer apt for Pi hardware libs (see docs/setup.md). These are pip fallbacks only.
pi = [
    "gpiozero>=2.0",
    "smbus2>=0.4",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[project.scripts]
fnk0043-server = "fnk0043.web.server:main"
fnk0043-center-servos = "fnk0043.cli.center_servos:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnk0043*"]
